--- a/Homework/Day_001_HW.ipynb
+++ b/Homework/Day_001_HW.ipynb
@@ -1,14 +1,378 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "P6xk2_jLsvFF"
+   },
+   "source": [
+    "# [作業目標]\n",
+    "\n",
+    "1. [簡答題] 請問下列兩種將 Array 轉換成 List 的方式有何不同？\n",
+    "\n",
+    "```\n",
+    "print('list(a): ', list(a))\n",
+    "print('tolist(): ', a.tolist())\n",
+    "```\n",
+    "\n",
+    "2. 請試著在程式中印出以下三個 NdArray 的屬性？（屬性：ndim、shape、size、dtype、itemsize、length、type）\n",
+    "\n",
+    "```\n",
+    "a = np.random.randint(10, size=6) \n",
+    "b = np.random.randint(10, size=(3,4)) \n",
+    "c = np.random.randint(10, size=(2,3,2)) \n",
+    "```\n",
+    "\n",
+    "3. 如何利用 list(...) 實現 a.tolist() 的效果？試著用程式實作。\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "uXGll28asvFS"
+   },
+   "source": [
+    "# 作業 "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "SYkvkp9YLwB7"
+   },
+   "source": [
+    "### 1. [簡答題] 請問下列兩種將 Array 轉換成 List 的方式有何不同？\n",
+    "\n",
+    "```\n",
+    "print('list(a): ', list(a))\n",
+    "print('tolist(): ', a.tolist())\n",
+    "```\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "id": "5QrYoyNWsvFS",
+    "outputId": "13f374d0-6f1b-47aa-bbac-c7d1a8c6995c"
+   },
+   "outputs": [],
+   "source": [
+    "# list(a)只會將最高維度的元素轉為list\n",
+    "# a.tolist則會將所有維度的元素全部轉為list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "AC9wUCyALwB9"
+   },
+   "source": [
+    "### 2. 請試著在程式中印出以下三個 NdArray 的屬性並且解釋結果？（屬性：ndim、shape、size、dtype、itemsize、length、type）\n",
+    "\n",
+    "```\n",
+    "a = np.random.randint(10, size=6) \n",
+    "b = np.random.randint(10, size=(3,4)) \n",
+    "c = np.random.randint(10, size=(2,3,2)) \n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "id": "4qARRsdtLwB-"
+   },
+   "outputs": [],
+   "source": [
+    "# 記得先 Import 正確的套件\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "id": "e1gVI0tvsvFY",
+    "outputId": "9be10770-9042-40c8-c4bc-217b84be9fc9"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 2 9 9 6 6]\n",
+      "1\n",
+      "(6,)\n",
+      "6\n",
+      "int32\n",
+      "4\n",
+      "6\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(10, size=6) \n",
+    "print(a) # a是取6次[0,10)中隨機出的整數所構成的1維陣列\n",
+    "print(a.ndim) # 維度個數\n",
+    "print(a.shape) # 陣列形狀\n",
+    "print(a.size) # 元素總數\n",
+    "print(a.dtype) # 元素資料型態\n",
+    "print(a.itemsize) # 每個元素占用的空間大小(byte)\n",
+    "print(len(a)) # 陣列長度\n",
+    "print(type(a)) # a的變數型態"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "id": "iIJrIr7kLwB_",
+    "outputId": "083c5519-394c-404e-9764-100c4ed5118a"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[5 9 2 2]\n",
+      " [0 3 2 0]\n",
+      " [0 3 3 3]]\n",
+      "2\n",
+      "(3, 4)\n",
+      "12\n",
+      "int32\n",
+      "4\n",
+      "3\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.random.randint(10, size=(3,4)) \n",
+    "\n",
+    "print(b) # b是取3*4次[0,10)中隨機出的整數所構成的2維陣列\n",
+    "print(b.ndim) # 維度個數\n",
+    "print(b.shape) # 陣列形狀\n",
+    "print(b.size) # 元素總數\n",
+    "print(b.dtype) # 元素資料型態\n",
+    "print(b.itemsize) # 每個元素占用的空間大小(byte)\n",
+    "print(len(b)) # 陣列長度\n",
+    "print(type(b)) # b的變數型態"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "id": "98SRFh_FLwCC",
+    "outputId": "dc65dfac-9ae6-49d2-f854-88eccebc2aac"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[7 8]\n",
+      "  [6 6]\n",
+      "  [7 9]]\n",
+      "\n",
+      " [[7 7]\n",
+      "  [0 7]\n",
+      "  [6 4]]]\n",
+      "3\n",
+      "(2, 3, 2)\n",
+      "12\n",
+      "int32\n",
+      "4\n",
+      "2\n",
+      "<class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.random.randint(10, size=(2,3,2)) \n",
+    "print(c) # c是取2*3*2次[0,10)中隨機出的整數所構成的3維陣列\n",
+    "print(c.ndim) # 維度個數\n",
+    "print(c.shape) # 陣列形狀\n",
+    "print(c.size) # 元素總數\n",
+    "print(c.dtype) # 元素資料型態\n",
+    "print(c.itemsize) # 每個元素占用的空間大小(byte)\n",
+    "print(len(c)) # 陣列長度\n",
+    "print(type(c)) # c的變數型態"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Uf6zC0QZLwCE"
+   },
+   "source": [
+    "### 3. 如何利用 list(...) 實現 a.tolist() 的效果？試著用程式實作。\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "id": "sCUzHu_BLwCF",
+    "outputId": "ba9c8945-8efb-42b1-f978-2bbdda97accd"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 2, 2, 4, 8, 8]\n",
+      "[9, 2, 2, 4, 8, 8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.random.randint(10, size=6) \n",
+    "\n",
+    "print(a.tolist())\n",
+    "print(list(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "id": "IUkVtw8RLwCG",
+    "outputId": "e39875a5-5ec7-431b-c12a-485acc167e44"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[6, 0, 9, 3], [8, 6, 8, 8], [5, 2, 7, 1]]\n",
+      "[array([6, 0, 9, 3]), array([8, 6, 8, 8]), array([5, 2, 7, 1])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "b = np.random.randint(10, size=(3,4)) \n",
+    "\n",
+    "print(b.tolist())\n",
+    "print(list(b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "id": "NPhF8_CqLwCG",
+    "outputId": "51fab908-5bfd-415f-9584-92bb376648c8"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[0, 3], [2, 6], [0, 7]], [[7, 1], [8, 0], [3, 0]]]\n",
+      "[array([[0, 3],\n",
+      "       [2, 6],\n",
+      "       [0, 7]]), array([[7, 1],\n",
+      "       [8, 0],\n",
+      "       [3, 0]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "c = np.random.randint(10, size=(2,3,2)) \n",
+    "\n",
+    "print(c.tolist())\n",
+    "print(list(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "id": "3Hc8vQYtLwCH",
+    "outputId": "1290bc93-84ca-4da4-eb1a-315da37afaff"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 2, 2, 4, 8, 8]\n",
+      "[[6, 0, 9, 3], [8, 6, 8, 8], [5, 2, 7, 1]]\n",
+      "[[[0, 3], [2, 6], [0, 7]], [[7, 1], [8, 0], [3, 0]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tolist(iterable):\n",
+    "    if(type(iterable) != np.ndarray):\n",
+    "        return iterable\n",
+    "    lst = []\n",
+    "    for element in iterable:\n",
+    "        lst.append(tolist(element))\n",
+    "    return list(lst)\n",
+    "    \n",
+    "print(tolist(a))\n",
+    "print(tolist(b))\n",
+    "print(tolist(c))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "id": "2lDVOwFpLwCJ",
+    "outputId": "ddfa84e4-3d32-4a68-c250-f57b2f66d830"
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 2, 2, 4, 8, 8]\n",
+      "[[6, 0, 9, 3], [8, 6, 8, 8], [5, 2, 7, 1]]\n",
+      "[[[0, 3], [2, 6], [0, 7]], [[7, 1], [8, 0], [3, 0]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "def tolist(iterable):\n",
+    "    if(type(iterable) != np.ndarray):\n",
+    "        return iterable\n",
+    "    return [tolist(element) for element in iterable]\n",
+    "    \n",
+    "print(tolist(a))\n",
+    "print(tolist(b))\n",
+    "print(tolist(c))"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "id": "tvqCpuFILwCK"
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "640whg6NLwCK"
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "colab": {
+   "name": "01Homework_維元.ipynb",
+   "provenance": []
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -28,5 +392,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 4
+ "nbformat_minor": 1
 }
