--- a/Homework/Day_002_HW.ipynb
+++ b/Homework/Day_002_HW.ipynb
@@ -109,7 +109,7 @@
    "outputs": [],
    "source": [
     "def is_dtype(a, t):\n",
-    "    return (a.dtype == t)"
+    "    return (a.dtype == t) # a.dtype is np.dtype(t)"
    ]
   },
   {
