--- a/test.ipynb
+++ b/test.ipynb
@@ -165,6 +165,170 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D3：NumPy陣列的初始化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 15 20 25]\n",
+      "[0. 1. 2.]\n",
+      "[  1.  10. 100.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.arange( 10, 30, 5 ))\n",
+    "# array([10, 15, 20, 25])\n",
+    "print(np.linspace( 0, 2, 3 ))\n",
+    "# array([0. 1. 2.])\n",
+    "print(np.logspace( 0, 2, 3 ))\n",
+    "# array([1. 10. 100.])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1.2361904   1.15169374]\n",
+      " [ 0.08386839 -1.21398297]\n",
+      " [ 0.38800389  2.1422208 ]]\n",
+      "[[0.34783311 0.07435547]\n",
+      " [0.38373747 0.57392032]\n",
+      " [0.39060422 0.59626724]]\n",
+      "[[3 6]\n",
+      " [2 8]\n",
+      " [3 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from numpy.random import default_rng\n",
+    "rng = default_rng()\n",
+    "\n",
+    "normal = rng.standard_normal((3,2)) # 3*2 array，元素值取3*2次符合Normal(mu=0,sigma=1)的值\n",
+    "random = rng.random((3,2)) # 3*2 array，元素值取3*2次[0,1)中的float值(均勻)\n",
+    "integers = rng.integers(0, 10, size=(3,2)) # 3*2 array，元素值取3*2次[0,10)中的值\n",
+    "\n",
+    "print(normal)\n",
+    "print(random)\n",
+    "print(integers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([('', 0, 0, ''), ('', 0, 0, ''), ('', 0, 0, '')],\n",
+       "      dtype=[('Name', '<U5'), ('num1', '<i4'), ('num2', '<i4'), ('True', '<U3')])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dt = np.dtype({'names':('Name', 'num1', 'num2', 'True'), 'formats':((np.str_, 5), np.int32, int, 'U3')})\n",
+    "c = np.zeros(3, dtype=dt)\n",
+    "c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Chloe', 11, 14, 'Y') ('Charl', 12, 15, 'Y') ('Clara', 13, 16, 'N')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "name = ['Chloe', 'Charlotte', 'Clara']\n",
+    "num_1 = [11, 12, 13]\n",
+    "num_2 = [14, 15, 16]\n",
+    "check = ['Y', 'Y', 'N']\n",
+    "\n",
+    "c['Name'] = name\n",
+    "c['num1'] = num_1\n",
+    "c['num2'] = num_2\n",
+    "c['True'] = check\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "rec.array([('Chloe', 11, 14, 'Y'), ('Charl', 12, 15, 'Y'),\n",
+       "           ('Clara', 13, 16, 'N')],\n",
+       "          dtype=[('Name', '<U5'), ('num1', '<i4'), ('num2', '<i4'), ('True', '<U3')])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_rec = c.view(np.recarray)\n",
+    "c_rec"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['Chloe', 'Charl', 'Clara'], dtype='<U5')"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "c_rec.Name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
