--- a/Homework/Day_003_HW.ipynb
+++ b/Homework/Day_003_HW.ipynb
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -98,12 +98,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[84.37972504  9.12107522  5.7328184 ]\n",
-      " [71.60016595 94.77562983 55.94815969]]\n",
-      "[[84.  9.  6.]\n",
-      " [72. 95. 56.]]\n",
-      "[[84.  9.  6.]\n",
-      " [72. 95. 56.]]\n"
+      "[[72.81192282 27.69598384 33.07512828]\n",
+      " [34.2675873  46.64323682 42.61453197]]\n",
+      "[[73. 28. 33.]\n",
+      " [34. 47. 43.]]\n",
+      "[[73. 28. 33.]\n",
+      " [34. 47. 43.]]\n"
      ]
     }
    ],
@@ -131,24 +131,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[23.86827241 31.77445251 27.6907715 ]\n",
-      " [20.39551876 22.95187521 35.11105692]]\n",
-      "[[24. 32. 28.]\n",
-      " [20. 23. 35.]]\n"
+      "[[24.9769134  29.57594863 31.16079089]\n",
+      " [37.38050302 22.05881316 26.91029081]]\n",
+      "[[25. 30. 31.]\n",
+      " [37. 22. 27.]]\n"
      ]
     }
    ],
    "source": [
     "m = 20\n",
     "n = 40\n",
-    "a = np.random.rand(2, 3) * (n - m) + m # 將[0,1)長度1拓展至長度(n-m)，再加上\n",
+    "a = np.random.rand(2, 3) * (n - m) + m # 將[0,1)長度1拓展至長度(n-m)，再加上左界\n",
     "print(a)\n",
     "print(np.round_(a))"
    ]
