--- a/test.ipynb
+++ b/test.ipynb
@@ -329,6 +329,71 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D4：NumPy陣列的算數運算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1. 3.]\n",
+      " [2. 4.]]\n",
+      "[[1. 2.]\n",
+      " [3. 4.]]\n",
+      "[[-2.   1. ]\n",
+      " [ 1.5 -0.5]]\n",
+      "5.0\n",
+      "[[-3.]\n",
+      " [ 4.]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([[1.0, 2.0], [3.0, 4.0]])\n",
+    "# [[1. 2.]\n",
+    "#  [3. 4.]]\n",
+    "y = np.array([[5.], [7.]])\n",
+    "# [[5.]]\n",
+    "#  [7.]]\n",
+    "\n",
+    "print(a.transpose()) # 非永久改變a\n",
+    "# array([[1., 3.],\n",
+    "#        [2., 4.]])\n",
+    "print(np.linalg.inv(a)) # inverse of a\n",
+    "# array([[-2. ,  1. ],\n",
+    "#        [ 1.5, -0.5]])\n",
+    "print(np.trace(a))\n",
+    "# 2.0\n",
+    "print(np.linalg.solve(a, y))  # ax = y 的解\n",
+    "# array([[-3.],\n",
+    "#        [ 4.]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
