--- a/test.ipynb
+++ b/test.ipynb
@@ -383,10 +383,189 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1.00000000e+00 1.11022302e-16]\n",
+      " [0.00000000e+00 1.00000000e+00]]\n",
+      "[[1. 0.]\n",
+      " [0. 1.]]\n",
+      "[[0 0]\n",
+      " [0 1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.array([[1.0, 2.0], [3.0, 4.0]])\n",
+    "# [[1. 2.]\n",
+    "#  [3. 4.]] \n",
+    "\n",
+    "a_inv = np.linalg.inv(a)\n",
+    "# array([[-2.  ,  1. ],\n",
+    "#   [ 1.5, -0.5]])\n",
+    "\n",
+    "I = np.dot(a,a_inv)\n",
+    "\n",
+    "print(I)\n",
+    "# [[1.0000000e+00 0.0000000e+00]\n",
+    "#  [8.8817842e-16 1.0000000e+00]]\n",
+    "\n",
+    "print(np.around(I))\n",
+    "#[[1. 0.]\n",
+    "# [0. 1.]]\n",
+    "print(I.astype(np.int64))\n",
+    "#[[1 0]\n",
+    "# [0 0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D5：NumPy陣列的邏輯運算"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ True  True  True  True]\n",
+      "[False False False False]\n",
+      "[False False False False]\n",
+      "[ True  True  True  True]\n",
+      "[ True False False False]\n",
+      "[ True  True  True False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "a = np.array( [20,30,40,50] )\n",
+    "b = np.arange( 4 )\n",
+    "# 比較運算\n",
+    "print(a > b) # [ True  True  True  True]\n",
+    "print(a < b) # [False False False False]\n",
+    "print(a == b) # [False False False False]\n",
+    "print(a != b) # [ True  True  True  True]\n",
+    "\n",
+    "a = np.array( [True, True, False, False] )\n",
+    "b = np.array( [True, False, True, False]  )\n",
+    "# 邏輯運算\n",
+    "#print(a and b) # ValueError\n",
+    "\n",
+    "# 位元運算\n",
+    "print(a & b) # [ True False False False]\n",
+    "print(a | b) # [ True  True  True False]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 20 30 40]\n",
+      "[10 30]\n",
+      "[]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array( [10, 20, 30, 40] )\n",
+    "\n",
+    "print(a[ [True, True, True, True] ])\n",
+    "# [10 20 30 40]\n",
+    "print(a[ [True, False, True, False] ])\n",
+    "# [10 30]\n",
+    "print(a[ [False, False, False, False] ])\n",
+    "# []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False  True  True]\n",
+      "[30 40]\n",
+      "[30 40]\n",
+      "[30, 40]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array( [10, 20, 30, 40] )\n",
+    "print(a > 20) # 單純印出bool值\n",
+    "# [False False  True  True]\n",
+    "print(a[ [False, False, True, True] ]) # 將bool值與a一一結合，只印出被定義為True的element\n",
+    "# [30 40] \n",
+    "print(a[ a > 20 ]) # 結合bool值，只印True的element\n",
+    "# [30 40] \n",
+    "\n",
+    "# python容器做法\n",
+    "b = []\n",
+    "for i in a:\n",
+    "  if i > 20:\n",
+    "    b.append(i)\n",
+    "print(b) # [30, 40]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "True\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "print(np.any([True, True, True])) # True\n",
+    "print(np.any([True, False, False])) # True\n",
+    "print(np.any([False, False, False])) # False\n",
+    "\n",
+    "print(np.all([True, True, True])) # True\n",
+    "print(np.all([True, False, False])) # False\n",
+    "print(np.all([False, False, False])) # False"
+   ]
   },
   {
    "cell_type": "code",
