--- a/Homework/Day_005_HW.ipynb
+++ b/Homework/Day_005_HW.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -71,7 +71,7 @@
     }
    ],
    "source": [
-    "a[(a >= 3) & (a <= 6)] = -a[(a >= 3) & (a <= 6)]\n",
+    "a[(a >= 3) & (a <= 6)] = -a[(a >= 3) & (a <= 6)] # 善用array運算！a[(a >= 3) & (a <= 6)] *= (-1)\n",
     "print(a)"
    ]
   },
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -96,10 +96,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[0.87011058 0.70886587 0.6965066  0.89408522 0.90371726 0.72220283]\n",
-      " [0.12319963 0.50255247 0.37903137 0.3065905  0.30151558 0.46939701]\n",
-      " [0.63212128 0.52326334 0.56046857 0.10619825 0.87261523 0.93217521]]\n",
-      "12\n"
+      "[[0.36301879 0.98563365 0.71178685 0.76653218 0.0621647  0.41267657]\n",
+      " [0.58149053 0.1824613  0.75186789 0.49130481 0.4632893  0.14255574]\n",
+      " [0.57124692 0.87811687 0.25294405 0.66915447 0.59175718 0.10017542]]\n",
+      "9\n"
      ]
     }
    ],
