--- a/test.ipynb
+++ b/test.ipynb
@@ -573,6 +573,177 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D6：NumPy中常見的陣列方法與函式"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2\n",
+      "[0 5 2 5]\n",
+      "[0 5 2 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "print(np.searchsorted([1,2,3,4,5], 3))# 2\n",
+    "print(np.searchsorted(\n",
+    "    [1, 2, 5, 4, 3],\n",
+    "    [-10, 10, 3, 5]\n",
+    "))# [0, 5, 2, 5]\n",
+    "print(np.searchsorted(\n",
+    "    [1, 2, 3, 4, 5],\n",
+    "    [-10, 10, 3, 5]\n",
+    "))# [0, 5, 2, 4]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1  1  1  1  1  1  1  1  1  1]\n",
+      "[-1 -1 -1 -1 -1 -1  1  1  1  1]\n",
+      "[[1 8]\n",
+      " [3 4]]\n",
+      "(array([2, 3, 4], dtype=int64),)\n",
+      "[ 6  8 10]\n",
+      "(array([0, 1], dtype=int64), array([1, 0], dtype=int64))\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(10)\n",
+    "print(np.where(a, 1, -1)) # [-1  1  1  1  1  1  1  1  1  1]\n",
+    "print(np.where(a > 5, 1, -1)) # [-1 -1 -1 -1 -1 -1  1  1  1  1]\n",
+    "print(np.where([[True,False], [True,True]],    # 第一個True對應x,y的1和9，因為要True，所以選1，其他以此類推\n",
+    "\t\t\t [[1,2], [3,4]],\n",
+    "             [[9,8], [7,6]]))\n",
+    "# [[1, 8],\n",
+    "#  [3, 4]]\n",
+    "\n",
+    "a = np.array([2, 4, 6, 8, 10])\n",
+    "print(np.where(a>5)) # (array([2, 3, 4], dtype=int64),)\n",
+    "print(a[np.where(a>5)]) # [6 8 10]\n",
+    "\n",
+    "print(np.where([[0, 1], [1, 0]]))  # 會return True的是value=1的element，座標分別是(0,1),(1,0)\n",
+    "# (array([0, 1], dtype=int64), array([1, 0], dtype=int64))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "[100   1   2   3   4   5]\n",
+      "None\n",
+      "[[0 1]\n",
+      " [2 3]\n",
+      " [4 5]]\n",
+      "[[0]\n",
+      " [1]\n",
+      " [2]]\n",
+      "[[0 1 2]\n",
+      " [0 0 0]\n",
+      " [0 0 0]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "a = np.arange(6) # [0, 1, 2, 3, 4, 5]\n",
+    "print(a.reshape(3, -1)) # 新形狀可模糊指定為-1，numpy會自動計算\n",
+    "print(a.reshape(3, 2))\n",
+    "# [[0 1]\n",
+    "#  [2 3]\n",
+    "#  [4 5]]\n",
+    "a.reshape(3,2)[0,0] = 100\n",
+    "print(a) # [100, 1, 2, 3, 4, 5] 本身的值也被改變了\n",
+    "\n",
+    "a = np.arange(6) # [0, 1, 2, 3, 4, 5]\n",
+    "print(a.resize((3, 2))) # None\n",
+    "print(a)\n",
+    "# [[0 1]\n",
+    "#  [2 3]\n",
+    "#  [4 5]]\n",
+    "a.resize(3, 1)\n",
+    "print(a)\n",
+    "# [[0]\n",
+    "# [1]\n",
+    "# [2]]\n",
+    "a.resize(3, 3)\n",
+    "print(a)\n",
+    "# [[0 1 2]\n",
+    "# [0 0 0]\n",
+    "# [0 0 0]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5]\n",
+      "[  0 100   2   3   4   5]\n",
+      "<numpy.flatiter object at 0x0000022788329B50>\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = np.arange(6).reshape((3, 2))\n",
+    "print(a.ravel()) # [0 1 2 3 4 5]\n",
+    "a.ravel()[1] = 100\n",
+    "print(a.flatten()) # [  0 100   2   3   4   5] a被改動了\n",
+    "print(a.flat) # <numpy.flatiter object at 0x0000022788329B50>\n",
+    "print(a.flat[2]) # 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
