--- a/Homework/Day_006_HW.ipynb
+++ b/Homework/Day_006_HW.ipynb
@@ -60,18 +60,9 @@
      "text": [
       "10\n",
       "10\n",
+      "10\n",
+      "10\n",
       "10\n"
-     ]
-    },
-    {
-     "ename": "AttributeError",
-     "evalue": "'list' object has no attribute 'sum'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-2d0b982b274d>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m3\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m4\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# AttributeError：list無.sum()這個屬性\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# 10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0msum\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;31m# 10\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'list' object has no attribute 'sum'"
      ]
     }
    ],
@@ -83,7 +74,7 @@
     "print(sum(a)) # 10\n",
     "\n",
     "b = [0, 1, 2, 3, 4]\n",
-    "print(b.sum()) # AttributeError：list無.sum()這個屬性\n",
+    "#print(b.sum()) # AttributeError：list無.sum()這個屬性\n",
     "print(np.sum(b)) # 10\n",
     "print(sum(b)) # 10"
    ]
@@ -102,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "id": "ffDRVHs9jxyS"
    },
@@ -114,12 +105,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "id": "e1gVI0tvsvFY",
     "outputId": "43bf676f-fd04-4edf-c062-b5fe7fe1f4bf"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.25377867 0.70060774 0.75997929 0.69203493 0.00681379]\n",
+      " [0.10447512 0.16844332 0.72988094 0.62096046 0.35686748]\n",
+      " [0.98938342 0.64169993 0.50768256 0.713419   0.1389183 ]\n",
+      " [0.279287   0.71363777 0.57827034 0.62357702 0.10833031]\n",
+      " [0.23927666 0.90890287 0.57445112 0.97183374 0.09161532]]\n",
+      "[[0.25134593 0.70610156 0.76652634 0.69737668 0.        ]\n",
+      " [0.0993938  0.16449678 0.73589406 0.62504137 0.3562635 ]\n",
+      " [1.         0.64614876 0.50975397 0.71914009 0.13444799]\n",
+      " [0.27730677 0.71936274 0.58159396 0.62770435 0.10331738]\n",
+      " [0.23658667 0.91809176 0.57770698 0.982139   0.08630588]]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.random.random((5, 5))\n",
     "print(A)\n",
@@ -139,12 +147,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "id": "Yu1kbLxojxyU",
     "outputId": "d323e754-178a-46ae-e15e-98275ae220dd"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0 1 2 3 4 5 6 7 8 9]\n",
+      "[ 0  1  2  3  4  5  6  7  8 -1]\n"
+     ]
+    }
+   ],
    "source": [
     "a = np.arange(10)\n",
     "print(a)\n",
