--- a/test.ipynb
+++ b/test.ipynb
@@ -739,6 +739,62 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D7：NumPy陣列的索引、切片與迭代"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np \n",
+    "\n",
+    "a = np.arange(6).reshape(3, 2)\n",
+    "\n",
+    "for d in a.flat:\n",
+    "    print(d)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character in identifier (<ipython-input-5-786b211015c0>, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-786b211015c0>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    ls = [[[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]],\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character in identifier\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls = [[[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]], \n",
+    "      [[13, 14, 15, 16], [17, 18, 19, 20], [21, 22, 23, 24]]]\n",
+    "a = np.array(ls, dtype=int)\n",
+    "print(a)\n",
+    "print(a.strides)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
