--- a/test.ipynb
+++ b/test.ipynb
@@ -774,24 +774,93 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-5-786b211015c0>, line 1)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-5-786b211015c0>\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    ls = [[[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]],\u001b[0m\n\u001b[1;37m               ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character in identifier\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "129 ns ± 54.4 ns per loop (mean ± std. dev. of 7 runs, 10 loops each)\n"
      ]
     }
    ],
    "source": [
-    "ls = [[[1, 2, 3, 4], [5, 6, 7, 8], [9, 10, 11, 12]], \n",
-    "      [[13, 14, 15, 16], [17, 18, 19, 20], [21, 22, 23, 24]]]\n",
-    "a = np.array(ls, dtype=int)\n",
-    "print(a)\n",
-    "print(a.strides)"
+    "Z = np.random.randint(0, 100, 1000000).reshape(100, 100, 100)\n",
+    "%timeit -n 10 a = 2\n",
+    "for i in np.nditer(Z):\n",
+    "    i = i+1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D8：Pandas物件定義與屬性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3,)\n",
+      "3\n",
+      "int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "s = pd.Series([1, 2, 3])\n",
+    "print(s.shape) # (3, )\n",
+    "print(s.size) # 3\n",
+    "print(s.dtype) # int64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3, 1)\n",
+      "3\n",
+      "0    int64\n",
+      "dtype: object\n",
+      "RangeIndex(start=0, stop=1, step=1)\n",
+      "RangeIndex(start=0, stop=3, step=1)\n",
+      "[[1]\n",
+      " [2]\n",
+      " [3]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([1, 2, 3])\n",
+    "print(df.shape) # (3, 1)\n",
+    "print(df.size) # 3\n",
+    "print(df.dtypes) \n",
+    "# 0    int64\n",
+    "# dtype: object\n",
+    "print(df.columns)\n",
+    "print(df.index)\n",
+    "print(df.values)"
    ]
   },
   {
