--- a/test.ipynb
+++ b/test.ipynb
@@ -869,6 +869,129 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D9：使用Pandas Dataframe的初始化"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0    1\n",
+      "1    2\n",
+      "2    3\n",
+      "dtype: int64\n",
+      "Amy    1\n",
+      "Bob    2\n",
+      "Tom    3\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "s = pd.Series([1,2,3])\n",
+    "\n",
+    "print(s)\n",
+    "# 0    1\n",
+    "# 1    2\n",
+    "# 2    3\n",
+    "# dtype: int64\n",
+    "\n",
+    "s = pd.Series([1,2,3],  index=['Amy', 'Bob', 'Tom'])\n",
+    "print(s)\n",
+    "# Amy    1\n",
+    "# Bob    2\n",
+    "# Tom    3\n",
+    "# dtype: int64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0\n",
+      "0  1\n",
+      "1  2\n",
+      "2  3\n",
+      "   No\n",
+      "a   1\n",
+      "b   2\n",
+      "c   3\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame([1, 2, 3])\n",
+    "print(df)\n",
+    "#    0\n",
+    "# 0  1\n",
+    "# 1  2\n",
+    "# 2  3\n",
+    "\n",
+    "df = pd.DataFrame([1, 2, 3], index=['a', 'b', 'c'], columns=['No'])\n",
+    "print(df)\n",
+    "#    No\n",
+    "# a   1\n",
+    "# b   2\n",
+    "# c   3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0  1  2\n",
+      "0  1  2  3\n",
+      "1  4  5  6\n",
+      "   A  B  C\n",
+      "a  1  2  3\n",
+      "b  4  5  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([[1, 2, 3], [4, 5, 6]])\n",
+    "print(df)\n",
+    "#    0  1  2\n",
+    "# 0  1  2  3\n",
+    "# 1  4  5  6\n",
+    "\n",
+    "df = pd.DataFrame([[1, 2, 3], [4, 5, 6]], index=['a', 'b'], columns=['A', 'B', 'C'])\n",
+    "print(df)\n",
+    "#    A  B  C\n",
+    "# a  1  2  3\n",
+    "# b  4  5  6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
