--- a/test.ipynb
+++ b/test.ipynb
@@ -1125,6 +1125,268 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D11：Pandas中的算術運算特性"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0  1  2\n",
+      "0  2  3  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 同col的對齊運算\n",
+    "df1 = pd.DataFrame([[1, 2, 3]])\n",
+    "df2 = pd.DataFrame([[1, 1, 1]])\n",
+    "print(df1 + df2)\n",
+    "#    0  1  2\n",
+    "# 0  2  3  4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    a   b  c   d   e\n",
+      "0 NaN NaN  4 NaN NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# 不同col的運算\n",
+    "df1 = pd.DataFrame([[1, 2, 3]], columns=['a', 'b', 'c'])\n",
+    "df2 = pd.DataFrame([[1, 1, 1]], columns=['c', 'd', 'e'])\n",
+    "print(df1 + df2)\n",
+    "#     a   b     c   d   e\n",
+    "# 0 NaN NaN     4 NaN NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0  1  2\n",
+      "0  2  3  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df1 = pd.DataFrame([[1, 2, 3]])\n",
+    "print(df1 + 1)\n",
+    "#    0  1  2\n",
+    "# 0  2  3  4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   0  1  2\n",
+      "0  2  3  4\n",
+      "   0   1   2\n",
+      "0  2 NaN NaN\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame([[1, 2, 3]])\n",
+    "print(df + 1)\n",
+    "#    0  1  2\n",
+    "# 0  2  3  4\n",
+    "print(df + pd.DataFrame([1]))\n",
+    "#    0   1   2\n",
+    "# 0  2 NaN NaN"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2 3 4]]\n",
+      "[[2 3 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "a = np.array([[1, 2, 3]])\n",
+    "print(a + 1)\n",
+    "# [[2 3 4]]\n",
+    "print(a + np.array([1]))\n",
+    "# [[2 3 4]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       A      B     C\n",
+      "a  False  False  True\n",
+      "b   True   True  True\n",
+      "     A    B  C\n",
+      "a  NaN  NaN  3\n",
+      "b  4.0  5.0  6\n",
+      "a    False\n",
+      "b     True\n",
+      "Name: A, dtype: bool\n",
+      "   A  B  C\n",
+      "b  4  5  6\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = pd.DataFrame([[1, 2, 3], [4, 5, 6]], index = ['a','b'], columns = ['A', 'B', 'C'])\n",
+    "print(df > 2) #        A      B     C\n",
+    "              # a  False  False  True\n",
+    "              # b   True   True  True\n",
+    "print(df[df > 2]) #      A    B  C\n",
+    "                  # a  NaN  NaN  3\n",
+    "                  # b  4.0  5.0  6\n",
+    "print(df['A'] > 2) # a    False\n",
+    "                   # b     True\n",
+    "                   # Name: A, dtype: bool\n",
+    "print(df[df['A'] > 2]) #    A  B  C\n",
+    "                       # b  4  5  6"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  col1  col2\n",
+      "0    A     2\n",
+      "1    a     1\n",
+      "2    B     9\n",
+      "3    b     8\n",
+      "  col1  col2\n",
+      "0    A     2\n",
+      "2    B     9\n",
+      "1    a     1\n",
+      "3    b     8\n",
+      "  col1  col2\n",
+      "0    A     2\n",
+      "1    a     1\n",
+      "2    B     9\n",
+      "3    b     8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'col1': ['A', 'a', 'B', 'b'],\n",
+    "    'col2': [2, 1, 9, 8],\n",
+    "})\n",
+    "print(df)\n",
+    "print(df.sort_values(by=['col1'])) # df.sort_values()不改變df本身\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  col1  col2\n",
+      "0    A     2\n",
+      "1    a     1\n",
+      "2    B     9\n",
+      "3    b     8\n",
+      "  col1  col2\n",
+      "0    A     2\n",
+      "2    B     9\n",
+      "1    a     1\n",
+      "3    b     8\n",
+      "  col1  col2\n",
+      "2    B     9\n",
+      "3    b     8\n",
+      "0    A     2\n",
+      "1    a     1\n",
+      "  col1  col2\n",
+      "0    A     2\n",
+      "1    a     1\n",
+      "2    B     9\n",
+      "3    b     8\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "    'col1': ['A', 'a', 'B', 'b'],\n",
+    "    'col2': [2, 1, 9, 8],\n",
+    "})\n",
+    "print(df)\n",
+    "\n",
+    "print(df.sort_values(by=['col1', 'col2']))\n",
+    "print(df.sort_values(by='col2', ascending=False))\n",
+    "print(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
