--- a/test.ipynb
+++ b/test.ipynb
@@ -1387,6 +1387,196 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# D12：Pandas迭代與重複操作"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "name\n",
+      "age\n",
+      "\n",
+      "\n",
+      "name    Alice\n",
+      "age        20\n",
+      "Name: 0, dtype: object\n",
+      "name    Bob\n",
+      "age      32\n",
+      "Name: 1, dtype: object\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "  'name': ['Alice', 'Bob'],\n",
+    "  'age': [20, 32]\n",
+    "})\n",
+    "\n",
+    "for c in df:\n",
+    "  print(c)\n",
+    "print('\\n')\n",
+    "for i in range(len(df)):\n",
+    "  print(df.iloc[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('name', 0    Alice\n",
+      "1      Bob\n",
+      "Name: name, dtype: object)\n",
+      "('age', 0    20\n",
+      "1    32\n",
+      "Name: age, dtype: int64)\n",
+      "\n",
+      "\n",
+      "(0, name    Alice\n",
+      "age        20\n",
+      "Name: 0, dtype: object)\n",
+      "(1, name    Bob\n",
+      "age      32\n",
+      "Name: 1, dtype: object)\n",
+      "\n",
+      "\n",
+      "Pandas(Index=0, name='Alice', age=20)\n",
+      "Pandas(Index=1, name='Bob', age=32)\n"
+     ]
+    }
+   ],
+   "source": [
+    "for d in df.iteritems():\n",
+    "  print(d)\n",
+    "# ('name', 0  Alice  1  Bob Name: name, dtype: object)\n",
+    "# ('age', 0  20  1  32  Name: age, dtype: int64)\n",
+    "for d in df.iterrows():\n",
+    "  print(d)\n",
+    "# (0, name Alice age 20 Name: 0, dtype: object)\n",
+    "# (1, name Bob age 32 Name: 1, dtype: object)\n",
+    "for d in df.itertuples():\n",
+    "  print(d)\n",
+    "# Pandas(Index=0, name='Alice', age=20)\n",
+    "# Pandas(Index=1, name='Bob', age=32)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "score    98\n",
+      "age      32\n",
+      "dtype: int64\n",
+      "score    67\n",
+      "age      20\n",
+      "dtype: int64\n",
+      "score    31\n",
+      "age      12\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.DataFrame({\n",
+    "  'score': [98, 67, 85],\n",
+    "  'age': [20, 32, 28]\n",
+    "})\n",
+    "\n",
+    "print(df.apply(np.max))\n",
+    "# score    98\n",
+    "# age      32\n",
+    "# dtype: int64\n",
+    "\n",
+    "print(df.apply(np.min))\n",
+    "# score    67\n",
+    "# age      20\n",
+    "# dtype: int64\n",
+    "\n",
+    "print(df.apply(lambda x: x.max() - x.min()))\n",
+    "# score    31\n",
+    "# age      12\n",
+    "# dtype: int64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0   -20\n",
+      "1   -32\n",
+      "2   -28\n",
+      "Name: age, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['age'].map(lambda x: -x))\n",
+    "# 0   -20\n",
+    "# 1   -32\n",
+    "# 2   -28\n",
+    "# Name: age, dtype: int64"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   score  age\n",
+      "0    -98  -20\n",
+      "1    -67  -32\n",
+      "2    -85  -28\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.applymap(lambda x: -x))\n",
+    "#    score  age\n",
+    "# 0    -98  -20\n",
+    "# 1    -67  -32\n",
+    "# 2    -85  -28"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
